# maze_solver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  main.py  main.py.bak  maze_generator.py  maze_generator.py.bak  pathfinding_algorithms.py  pyproject.toml  render.py
.github/: dependabot.yml
.github/workflows/: backlog.yml  ci.yml  pages.yml  release.yml  security.yml  wiki.yml
docs/: ALGORITHMS.md  maze_algorithm_catalog.json
docs/wiki/: Algorithms.md  Architecture.md  Backlog.md  Home.md  Operations.md
src/maze_solver/: __init__.py  algorithms.py  catalog.py  cli.py  generation.py  grid.py  gui.py  known_2d_backlog.json  render.py  stats.py  tui.py  web_server.py
src/maze_solver/automation/: __init__.py  correlate_issues.py
src/maze_solver/web/: comparison.html  index.html  package-lock.json  package.json
src/maze_solver/web/src/: comparison.js  main.js  mazeConnectivity.js  mazeTopology.js  styles.css
src/maze_solver/web/tests/: hadlock.test.mjs  mazeConnectivity.test.mjs
src/tests/: test_algorithm_catalog.py  test_generation.py  test_gui_catalog.py  test_issue_correlation.py  test_tui.py
tests/: test_algorithm_catalog.py  test_algorithms.py  test_generation.py  test_gui_catalog.py  test_tui.py
web/: comparison.html  index.html  package-lock.json  package.json
web/src/: hadlock.js  main.js  mazeStats.js  styles.css
web/tests/: mazeConnectivity.test.mjs  mazeStats.test.mjs  webuiSmoke.mjs
