[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maze-solver"
version = "0.1.3"
description = "Maze generation and pathfinding visualizer with GUI, TUI, and WebUI interfaces."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "kleinpanic", email = "kleinpanic@gmail.com" }]
dependencies = ["numpy>=1.24"]
keywords = ["maze", "pathfinding", "graph-search", "tkinter", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[project.scripts]
maze-solver-tui = "maze_solver.tui:main"
maze-solver-web = "maze_solver.web_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
